  signal_init()
	- Unconditionally disable VDSUSP if it exists, stops ^Y
	  suspending nano on the Hurd.
  help_init()
	- Typo fixes in help strings.
- winio.c:
  update_line()
	- set realdata check to >= 1 && <= 31, lack of > 0 check screwed
	  high ascii characters.
  titlebar()
	- gettextized a pair of strings.
- m4/gettext.m4:
	- Back down to 1.1.3 version.
- po/sv.po:
	- Swedish translation update (Christian Rose).
- po/ru.po:
	- Russian translation update (Sergey A. Ribalchenko).
- po/ca.po, es.po:
	- Catalan and Spanish translations updates (Jordi).
- po/pl.po:
	- New Polish, partial translation, by Cezary Sliwa <sliwa@cft.edu.pl>.

nano-1.1.4 - 12/11/2001
- General
	- Preliminary syntax highlighting support.  New functions
	  colortoint() and parse_color() in rcfile.c, new code in 
	  edit_add() in winio.c to actually do the highlighting.  It's
	  not even close to pretty yet :P
	- Many int/long alignments (David Lawrence Ramsey).
- files.c:
	- Fixes for tab completion and screen refresh (David Lawrence
	  Ramsey).
  add_open_file()
	- Get rid of unsetting MARK_ISSET because otherwise writing
	  marked text will automatically unset the marker with
	  multibuffer enabled.
- global.c:
	- Define currshortcut and currslen when either DISABLE_MOUSE
	  or DISABLE_HELP or DISABLE_BROWSER is not defined (Silvan
	  Minghetti).
- nano.c:
  main()
	- Add Esc-[-[IGL] keys for FreeBSD Console (PgUp,PgDn,Insert).
        - Added better Hurd support for function keys (Alt-V,U,9,@,F).
  signal_init()
        - do SIG_IGN for the SIGTSTP sigaction regardless of whether
          we have _POSIX_VDISABLE or not (more Hurd fixes)
  help_init()
	- Typo fixes and additions to the new help texts.
  do_curpos()
	- Now takes arg for constant updating to always show the cursor
	  position (David Lawrence Ramsey).
  do_wrap()
	- Many fixes (David Lawrence Ramsey).
  do_spell() 
	- Dont prompt for replace if we don't change the word in
	  question (Rocco Corsi).
- po/de.po: